# empty_engine

./: .gitignore  3rdparty.cmake  CMakeLists.txt  README.md  key.json  library.cmd  malloc.txt.txt  set.json
data/shaders/glsl/: bind_ps.glsl  instance_vs.glsl  test_gs.glsl  test_ps.glsl  test_vs.glsl
empty/: CMakeLists.txt
empty/component/: camera.cpp  camera.h
empty/core/: config.h  defines.h  file_system.h  typedef.h  vertex_type.h
empty/graphics/: buffer.h  buffer_pool.h  command_list.cpp  command_list.h  context.cpp  context.h  graphics.cpp  graphics.h  graphics_context.cpp  graphics_context.h  hash_table.h  input_layout.h  pipeline.h  shader.h
empty/graphics/dx12/: dx12_buffer.h
empty/graphics/opengl/: gl_buffer.cpp  gl_buffer.h  gl_config.h  gl_context.cpp  gl_context.h  gl_input_layout.cpp  gl_input_layout.h  gl_shader.cpp  gl_shader.h  opengl_summary.md
empty/math/: linermath.h  vec3.h
empty/system/: input.cpp  input.h  scene.h  timer.cpp  timer.h
empty/window/: window.cpp  window.h
sample/: CMakeLists.txt  main.cpp
sample/experimental/: gl_dsa.cpp  gl_dsa.h
sample/scenes/: triangle_scene.cpp  triangle_scene.h
sample/scenes/opengl/: debug_object.h  dsa_scene.cpp  dsa_scene.h
